Allow clearing local CC details
R=dschuyler@chromium.org,dpapad@chromium.org
BUG=726062
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2919873003
Cr-Original-Commit-Position: refs/heads/master@{#476817}
Review-Url: https://codereview.chromium.org/2920223005 .
Cr-Commit-Position: refs/branch-heads/3112@{#172}
Cr-Branched-From: 07faed0551ea9474531c25080552dfc7bccfa9e8 [formerly b6460e24cf59f429d69de255538d0fc7a425ccf9]-refs/heads/master@{#474897}

Former-commit-id: 7ccb5bb42f0f5f969cb057175cc291fb3d594a21

--- a/chrome/browser/resources/settings/passwords_and_forms_page/autofill_section.html
+++ b/chrome/browser/resources/settings/passwords_and_forms_page/autofill_section.html
@@ -160,12 +160,12 @@
             <div class="expiration-column">
               <div id="creditCardExpiration"
                   class="expiration-date">[[expiration_(item)]]</div>
-              <template is="dom-if" if="[[item.metadata.isLocal]]">
+              <template is="dom-if" if="[[showDots_(item.metadata)]]">
                 <paper-icon-button id="creditCardMenu" icon="cr:more-vert"
                     on-tap="onCreditCardMenuTap_" title="$i18n{moreActions}">
                 </paper-icon-button>
               </template>
-              <template is="dom-if" if="[[!item.metadata.isLocal]]">
+              <template is="dom-if" if="[[!showDots_(item.metadata)]]">
                 <button is="paper-icon-button-light" class="icon-external"
                     on-tap="onRemoteEditCreditCardTap_" actionable></button>
               </template>
@@ -182,6 +182,7 @@
       <button id="menuEditCreditCard" class="dropdown-item"
           on-tap="onMenuEditCreditCardTap_">$i18n{edit}</button>
       <button id="menuRemoveCreditCard" class="dropdown-item"
+          hidden$="[[!activeCreditCard.metadata.isLocal]]"
           on-tap="onMenuRemoveCreditCardTap_">$i18n{removeCreditCard}</button>
       <button id="menuClearCreditCard" class="dropdown-item"
           on-tap="onMenuClearCreditCardTap_"
