--- a/chrome/browser/resources/settings/device_page/display.html
+++ b/chrome/browser/resources/settings/device_page/display.html
@@ -202,32 +202,34 @@
     </div>
 
     <!-- Night Light Settings -->
-    <div class="settings-box">
-      <div class="start">
-        <h2 id="nightLightLabel">$i18n{displayNightLightLabel}</h2>
-        <div class="secondary">$i18n{displayNightLightText}</div>
-      </div>
-      <settings-toggle-button
-          id="nightLightToggleButton"
-          pref="{{prefs.ash.night_light.enabled}}"
-          aria-labelledby="nightLightLabel">
-      </settings-toggle-button>
-    </div>
-    <div id="nightLightSettingsDiv"
-        class="settings-box continuation start layout vertical">
-      <!-- Color temperature slider -->
-      <div class="settings-box embedded continuation">
-        <div class="start textarea" id="colorTemperatureLabel">
-          $i18n{displayNightLightTemperatureLabel}
+    <template is="dom-if" if="[[nightLightFeatureEnabled_]]" restamp>
+      <div class="settings-box">
+        <div class="start">
+          <h2 id="nightLightLabel">$i18n{displayNightLightLabel}</h2>
+          <div class="secondary">$i18n{displayNightLightText}</div>
         </div>
-        <settings-slider id="colorTemperatureSlider"
-          aria-labelledby="colorTemperatureLabel" min="0" max="100" scale="100"
-          label-min="$i18n{displayNightLightTempSliderMinLabel}"
-          label-max="$i18n{displayNightLightTempSliderMaxLabel}"
-          pref="{{prefs.ash.night_light.color_temperature}}">
-        </settings-slider>
+        <settings-toggle-button
+            id="nightLightToggleButton"
+            pref="{{prefs.ash.night_light.enabled}}"
+            aria-labelledby="nightLightLabel">
+        </settings-toggle-button>
       </div>
-    </div>
+      <div id="nightLightSettingsDiv"
+          class="settings-box continuation start layout vertical">
+        <!-- Color temperature slider -->
+        <div class="settings-box embedded continuation">
+          <div class="start textarea" id="colorTemperatureLabel">
+            $i18n{displayNightLightTemperatureLabel}
+          </div>
+          <settings-slider id="colorTemperatureSlider"
+              aria-labelledby="colorTemperatureLabel" min="0" max="100"
+              scale="100" label-min="$i18n{displayNightLightTempSliderMinLabel}"
+              label-max="$i18n{displayNightLightTempSliderMaxLabel}"
+              pref="{{prefs.ash.night_light.color_temperature}}">
+          </settings-slider>
+        </div>
+      </div>
+    </template>
 
   </template>
   <script src="display.js"></script>
