[MD settings] adjust button layout
This CL gives proper spacing of paper-buttons in settings boxes. There are several cases to consider: a button at the start of a row; a button at the end of the row; multiple buttons in a row; buttons before or after a separator.

BUG=725172, 726262, 724944
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2902363002
Cr-Original-Commit-Position: refs/heads/master@{#476067}
Review-Url: https://codereview.chromium.org/2931723002 .
Cr-Commit-Position: refs/branch-heads/3112@{#235}
Cr-Branched-From: 07faed0551ea9474531c25080552dfc7bccfa9e8 [formerly b6460e24cf59f429d69de255538d0fc7a425ccf9]-refs/heads/master@{#474897}

Former-commit-id: c366c9166c518e396d66db4edf2a7f0dba12e7f0

--- a/chrome/browser/resources/settings/controls/controlled_button.html
+++ b/chrome/browser/resources/settings/controls/controlled_button.html
@@ -13,6 +13,8 @@
     <style include="settings-shared">
       :host {
         --justify-margin: 8px;
+        -webkit-margin-end: calc(var(--settings-button-edge-spacing) * -1);
+        -webkit-margin-start: calc(var(--settings-button-edge-spacing) * -1);
         align-items: center;
         display: flex;
       }
