--- a/ui/webui/resources/cr_elements/shared_style_css.html
+++ b/ui/webui/resources/cr_elements/shared_style_css.html
@@ -49,7 +49,8 @@
       }
 
       button[is='paper-icon-button-light'] {
-        @apply(--cr-paper-icon-button-margin);
+        -webkit-margin-end: var(--cr-icon-ripple-margin);
+        -webkit-margin-start: 16px;
         background-position: center;
         background-repeat: no-repeat;
         background-size: var(--cr-icon-size);
