--- a/ui/webui/resources/cr_elements/shared_vars_css.html
+++ b/ui/webui/resources/cr_elements/shared_vars_css.html
@@ -24,10 +24,12 @@
       width: var(--cr-icon-size);
     }
 
+    --cr-icon-ripple-margin: calc(var(--cr-icon-ripple-padding) * -1);
+
     --cr-paper-icon-button-margin: {
       /* Shift button so ripple overlaps the end of the row. */
-      -webkit-margin-end: calc(var(--cr-icon-ripple-padding) * -1);
-      -webkit-margin-start: calc(var(--cr-icon-ripple-padding) * -1);
+      -webkit-margin-end: var(--cr-icon-ripple-margin);
+      -webkit-margin-start: var(--cr-icon-ripple-margin);
     }
 
     --cr-selectable-focus: {
