[MD settings] layout of buttons inside toggles and iron-lists
My prior CL 2902363002 did not properly account for buttons inside of
iron-lists (which will render poorly if overflow is visible, and clip off
ripples if overflow is visible); and buttons inside of toggle-buttons.
This CL addresses those gaps.

BUG=728493, 728490, 728487
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2918953002
Cr-Original-Commit-Position: refs/heads/master@{#476699}
Review-Url: https://codereview.chromium.org/2926643004 .
Cr-Commit-Position: refs/branch-heads/3112@{#236}
Cr-Branched-From: 07faed0551ea9474531c25080552dfc7bccfa9e8 [formerly b6460e24cf59f429d69de255538d0fc7a425ccf9]-refs/heads/master@{#474897}

Former-commit-id: 3235d6e5d9211b5569d3a606b428c5cf98359cf4

--- a/chrome/browser/resources/settings/settings_shared_css.html
+++ b/chrome/browser/resources/settings/settings_shared_css.html
@@ -39,6 +39,13 @@
         -webkit-margin-start: var(--cr-icon-ripple-margin));
       }
 
+      .list-item paper-icon-button {
+        /* Workaround iron-list cutting off ripples on paper-icon-buttons.
+         * TODO(dschuyler): Can the end margin be done differently to allow for
+         * ripples to look like they are overlapping the margin. */
+        -webkit-margin-end: 0;
+      }
+
       /* See notes in .primary-button.
        * TODO(dschuyler): Remove unnecessary .secondary-button references. */
       paper-button {
@@ -66,6 +73,11 @@
        * the row. */
       .settings-box paper-button:last-of-type {
         -webkit-margin-end: calc(var(--settings-button-edge-spacing) * -1);
+      }
+
+      /* Special case for buttons inside of toggle-buttons. */
+      .settings-box settings-toggle-button paper-button:last-of-type {
+        -webkit-margin-end: 16px;
       }
 
       /* Space out multiple buttons in the same row. */
