NetInfo: Slight update to the default network quality value
This CL changes the default values of |downlink| to be a multiple of
25 kbps.

BUG=727786

Review-Url: https://codereview.chromium.org/2912013002
Cr-Original-Commit-Position: refs/heads/master@{#477227}
Review-Url: https://codereview.chromium.org/2929703003 .
Cr-Commit-Position: refs/branch-heads/3112@{#270}
Cr-Branched-From: 07faed0551ea9474531c25080552dfc7bccfa9e8 [formerly b6460e24cf59f429d69de255538d0fc7a425ccf9]-refs/heads/master@{#474897}

Former-commit-id: 22922b662424d54269fdcb2625622b9f842bb627

--- a/content/test/data/net_info.html
+++ b/content/test/data/net_info.html
@@ -7,7 +7,7 @@ function getType() {
 }
 
 function getDownlinkMax() {
-  sendValueToTest(navigator.connection.downlinkMax.toString());
+  sendValueToTest(navigator.connection.downlinkMax);
 }
 
 function getOnLine() {
@@ -19,11 +19,11 @@ function getEffectiveType() {
 }
 
 function getRtt() {
-  sendValueToTest(navigator.connection.rtt.toString());
+sendValueToTest(navigator.connection.rtt);
 }
 
 function getDownlink() {
-  sendValueToTest(navigator.connection.downlink.toString());
+  sendValueToTest(navigator.connection.downlink);
 }
 
 function sendValueToTest(value) {
