--- a/chrome/browser/resources/settings/search_page/search_page.html
+++ b/chrome/browser/resources/settings/search_page/search_page.html
@@ -160,7 +160,8 @@
 <if expr="chromeos">
         <!-- Google Assistant -->
         <template is="dom-if" if="[[showAssistantSection_(
-            voiceInteractionFeatureEnabled_, prefs.arc.enabled.value)]]">
+            voiceInteractionFeatureEnabled_, prefs.arc.enabled.value,
+            prefs.arc.voice_interaction_value_prop.accepted.value)]]">
           <div id="assistant-subpage-trigger" class="settings-box two-line"
             on-tap="onGoogleAssistantTap_" actionable>
           <div class="start">
